--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "ot-fuzzer": "~1.0.0",
-    "mocha": "^1.20.1"
+    "mocha": "^1.20.1",
+    "coffee-script": "^1.7.1"
   },
   "scripts": {
     "test": "mocha test"
