--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "ot-fuzzer": "~1.0.0",
-    "mocha": "^1.20.1",
-    "coffee-script": "^1.7.1"
+    "coffee-script": "^1.7.1",
+    "mocha": "^3.2.0",
+    "ot-fuzzer": "~1.0.0"
   },
   "scripts": {
     "test": "mocha test"
