--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "coffee-script": "^1.7.1",
-    "mocha": "^3.2.0",
+    "coffeescript": "^2.3.2",
+    "mocha": "5",
     "ot-fuzzer": "~1.0.0"
   },
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha test/*.coffee"
   },
   "repository": {
     "type": "git",
